# oxool-module-table2sc

./: Makefile.am  Table2SC.xml  configure.ac  module.xml.in
admin/: admin.html  admin.js
admin/l10n/: zh_TW.json
debian/: changelog  control
src/: Table2SC.cpp
